Finished styling and refactoring